--- a/index.htm
+++ b/index.htm
@@ -618,7 +618,7 @@
 
     <section id="about" class="about">
       <div class="container">
-        <h2>About Pak Fazal Trading</h2>
+        <h2>About Pelican Autos</h2>
         <div class="about-content">
           <div class="about-text">
             <p>
